EXTRA_DIST = \
run.sh \
19.suite \
basics.suite \
performance.suite \
static_safety.suite \
uct.suite \
backfill.tst \
blunder_long_ladder_19.tst \
blunder_play_near_dead_19.tst \
blunder_rave.tst \
blunder_selfatari_19.tst \
blunder_short_ladder_19.tst \
book_moves.tst \
cleanup_japanese_rules.tst \
escape_capture_19.tst \
eval_life_and_death.tst \
eval_seki.tst \
final_moves.tst \
free_handicap.tst \
kgs-genmove_cleanup.tst \
ladder.tst \
performance_icgc2008.tst \
performance_eval_pro_9x9.tst \
performance_middlegame_hard_9x9.tst \
performance_pro_9x9.tst \
repetition.tst \
simpleplayers.tst \
static_safety_basics.tst \
static_safety_from_semeai.tst \
static_safety_fullboard.tst \
tactics_19.tst \
uct_basics.tst \
uct_blunder.tst \
uct_blunder_19.tst \
uct_book.tst \
uct_connection.tst \
uct_direction_of_play.tst \
uct_endgame.tst \
uct_evaluation.tst \
uct_fight_on.tst \
uct_ko.tst \
uct_life_and_death.tst \
uct_move.tst \
uct_pass_basics.tst \
uct_playout.tst \
uct_rootfilter.tst \
uct_seki.tst \
uct_selfatari.tst \
uct_semeai.tst \
uct_semeai_blunder.tst \
19.list \
basics_fuegotest.list \
basics_uct.list \
performance.list \
static_safety.list \
uct.list \
sgf/approach_move/backfill.1.sgf \
sgf/book_test/book.0.sgf \
sgf/book_test/book.1.sgf \
sgf/book_test/book.2.sgf \
sgf/book_test/book.3.sgf \
sgf/book_test/book.4.sgf \
sgf/book_test/book.5.sgf \
sgf/book_test/book.6.sgf \
sgf/book_test/book.7.sgf \
sgf/book_test/book.8.sgf \
sgf/book_test/book.9.sgf \
sgf/book_test/book.10.sgf \
sgf/book_test/book.11.sgf \
sgf/book_test/book.12.sgf \
sgf/evaluation/miseval.1.sgf \
sgf/eyes/1.5/make-nakade.1.sgf \
sgf/eyes/1.5/make-nakade.2.sgf \
sgf/eyes/1/nakade.1.sgf \
sgf/final_moves/play-in-benson-safe.1.sgf \
sgf/final_moves/play-in-benson-safe.2.sgf \
sgf/games/2007/194557.variation.sgf \
sgf/games/2007/CGOS/107433.sgf \
sgf/games/2007/CGOS/107439.sgf \
sgf/games/2007/CGOS/107457.sgf \
sgf/games/2007/CGOS/147759.sgf \
sgf/games/2007/CGOS/188524-variation-filling-bug.sgf \
sgf/games/2007/CGOS/189376.sgf \
sgf/games/2007/CGOS/189582.sgf \
sgf/games/2007/CGOS/189676.sgf \
sgf/games/2007/CGOS/189715.sgf \
sgf/games/2007/CGOS/189721.sgf \
sgf/games/2007/CGOS/189930-variation.sgf \
sgf/games/2007/CGOS/191282.sgf \
sgf/games/2007/CGOS/193838.sgf \
sgf/games/2007/CGOS/193893.sgf \
sgf/games/2007/CGOS/193991.sgf \
sgf/games/2007/CGOS/194557.sgf \
sgf/games/2007/CGOS/196322-variation.1.sgf \
sgf/games/2007/CGOS/196322-variation.2.sgf \
sgf/games/2007/CGOS/199550.sgf \
sgf/games/2007/CGOS/200058.sgf \
sgf/games/2007/CGOS/200109-variation.sgf \
sgf/games/2007/CGOS/200109.sgf \
sgf/games/2007/CGOS/200163-variation.sgf \
sgf/games/2007/CGOS/200163.sgf \
sgf/games/2007/CGOS/200190.sgf \
sgf/games/2007/CGOS/200368.sgf \
sgf/games/2007/CGOS/201395.sgf \
sgf/games/2007/CGOS/70767-test1.sgf \
sgf/games/2007/CGOS/70767-test2.sgf \
sgf/games/2007/CGOS/70767-test3.sgf \
sgf/games/2007/CGOS/71448.sgf \
sgf/games/2007/CGOS/71459.sgf \
sgf/games/2007/CGOS/71469-test.sgf \
sgf/games/2007/CGOS/71814-test.sgf \
sgf/games/2007/bookwhite-4.sgf \
sgf/games/2007/move88-selfatari-eval-bug.sgf \
sgf/games/2007/seki-evaluation-problem.sgf \
sgf/games/2007/simulation-bug-107407.2.sgf \
sgf/games/2007/simulation-bug-107407.sgf \
sgf/games/2007/uct160K-mogo10K-2.sgf \
sgf/games/2008/CGOS/Fuego-519-2c-20080920080149.sgf \
sgf/games/2008/CGOS/Fuego-640-8c-20081109232055.sgf \
sgf/games/2008/CGOS/Fuego-640-8c-20081112153751.sgf \
sgf/games/2008/CGOS/Fuego-640-8c-20081113151939.sgf \
sgf/games/2008/CGOS/Fuego-671-2c-20081125070320.sgf \
sgf/games/2008/CGOS/Fuego-671-2c-20081125113323.sgf \
sgf/games/2008/CGOS/seki-miseval-20081113151939.sgf \
sgf/games/2008/CGOS/248520.sgf \
sgf/games/2008/CGOS/248559.sgf \
sgf/games/2008/CGOS/249009.sgf \
sgf/games/2008/CGOS/251434-variation.sgf \
sgf/games/2008/CGOS/31410.sgf \
sgf/games/2008/CGOS/31423.sgf \
sgf/games/2008/CGOS/31425.sgf \
sgf/games/2008/CGOS/31431.sgf \
sgf/games/2008/CGOS/365007-variation.sgf \
sgf/games/2008/CGOS/365007.sgf \
sgf/games/2008/CGOS/386193-mogo-mannenko-bug.sgf \
sgf/games/2008/CGOS/386221.sgf \
sgf/games/2008/CGOS/397651.sgf \
sgf/games/2008/CGOS/397739.sgf \
sgf/games/2008/CGOS/397892.sgf \
sgf/games/2008/CGOS/397919-variation.sgf \
sgf/games/2008/CGOS/397919.sgf \
sgf/games/2008/CGOS/428168.sgf \
sgf/games/2008/CGOS/540532.sgf \
sgf/games/2008/CGOS/543088.sgf \
sgf/games/2008/CGOS/594998.sgf \
sgf/games/2008/CGOS/595022.sgf \
sgf/games/2008/CGOS/595027.sgf \
sgf/games/2008/CGOS/595042.sgf \
sgf/games/2008/CGOS/595097.sgf \
sgf/games/2008/CGOS/595267.sgf \
sgf/games/2008/CGOS/595283.sgf \
sgf/games/2008/CGOS/595383.sgf \
sgf/games/2008/CGOS/uct20080117031720-variation.sgf \
sgf/games/2008/EGC2008/19/FirstGoBot-Fuego.sgf \
sgf/games/2008/EGC2008/19/Fuego-ManyFaces1.sgf \
sgf/games/2008/EGC2008/19/Fuego-wei2go.sgf \
sgf/games/2008/EGC2008/19/LeelaBot2-Fuego.sgf \
sgf/games/2008/EGC2008/19/valkyria19-Fuego.sgf \
sgf/games/2008/EGC2008/9/CrazyEGC2-Fuego9.sgf \
sgf/games/2008/EGC2008/9/Fuego9-FirstGo9.sgf \
sgf/games/2008/EGC2008/9/Fuego9-LeelaBot.sgf \
sgf/games/2008/EGC2008/9/Fuego9-MonteGNU.sgf \
sgf/games/2008/EGC2008/9/Fuego9-stv.sgf \
sgf/games/2008/ICGC2008/9/01-Fuego-Goboh.sgf \
sgf/games/2008/ICGC2008/9/01-Goboh-Fuego.sgf \
sgf/games/2008/ICGC2008/9/02-Fuego-Steenvreter.sgf \
sgf/games/2008/ICGC2008/9/02-Steenvreter-Fuego.sgf \
sgf/games/2008/ICGC2008/9/03-Fuego-GoIntellect.sgf \
sgf/games/2008/ICGC2008/9/03-GoIntellect-Fuego.sgf \
sgf/games/2008/ICGC2008/9/04-Fuego-ManyFaces.sgf \
sgf/games/2008/ICGC2008/9/04-ManyFaces-Fuego.sgf \
sgf/games/2008/ICGC2008/9/05-Fuego-Yogo.sgf \
sgf/games/2008/ICGC2008/9/05-Yogo-Fuego.sgf \
sgf/games/2008/ICGC2008/9/06-Fuego-Golois.sgf \
sgf/games/2008/ICGC2008/9/06-Golois-Fuego.sgf \
sgf/games/2008/ICGC2008/9/07-Fuego-MoGo.sgf \
sgf/games/2008/ICGC2008/9/07-MoGo-Fuego.sgf \
sgf/games/2008/ICGC2008/9/08-Fuego-Leela.sgf \
sgf/games/2008/ICGC2008/9/08-Leela-Fuego.sgf \
sgf/games/2008/ICGC2008/9/09-Aya-Fuego.sgf \
sgf/games/2008/ICGC2008/9/09-Fuego-Aya.sgf \
sgf/games/2008/KGS/7/25/PaperTiger-Fuego.sgf \
sgf/games/2008/KGS/7/26/MatroidX-4.sgf \
sgf/games/2008/KGS/7/26/MatroidX-5.sgf \
sgf/games/2008/KGS/7/26/Newou-Fuego9.sgf \
sgf/games/2008/KGS/7/27/Yuusen-Fuego9-3.sgf \
sgf/games/2008/KGS/7/27/hahaha6k-Fuego9.sgf \
sgf/games/2008/KGS/7/28/dege-Fuego9.sgf \
sgf/games/2008/KGS/8/17/AyaMC-Fuego9.sgf \
sgf/games/2008/KGS/8/17/AyaMC-Fuego9-variation.sgf \
sgf/games/2008/KGS/8/21/Hellyta-Fuego.sgf \
sgf/games/2008/KGS/9/16/Fuego-masaician.sgf \
sgf/games/2008/blunder-move-25.sgf \
sgf/games/2008/gnu-uct3K-11.sgf \
sgf/games/2008/gnu-uct3K-17.sgf \
sgf/games/2008/gnu-uct3K-28.sgf \
sgf/games/2008/gnu-uct3K-30.sgf \
sgf/games/2008/ko-bug.sgf \
sgf/games/2008/leela-seki-variation.sgf \
sgf/games/2008/mogo-ko+ld-problem-variation.sgf \
sgf/games/2008/mogo-ko+ld-problem.sgf \
sgf/games/2008/seki-miseval.sgf \
sgf/games/2009/CGOS/702960.sgf \
sgf/games/2009/CGOS/703006.sgf \
sgf/games/2009/May/Fuego9-Fuego-27.sgf \
sgf/games/2009/MM-Fuego20090124-variation.sgf \
sgf/games/2010/CGOS/1005347.sgf \
sgf/games/2010/CGOS/1072936.sgf \
sgf/games/2010/CGOS/1072936-variation.sgf \
sgf/games/2010/CGOS/1072936-variation2.sgf \
sgf/games/2010/LittleGolem/1173624.sgf \
sgf/games/2010/LittleGolem/1177582.sgf \
sgf/games/pro-9x9/mz1.sgf \
sgf/games/pro-9x9/zhou9a.sgf \
sgf/gnugo-games/seki01.sgf \
sgf/gnugo-games/seki02.sgf \
sgf/gnugo-games/seki03.sgf \
sgf/gnugo-games/seki04.sgf \
sgf/gnugo-games/seki05.sgf \
sgf/gnugo-games/seki06.sgf \
sgf/gnugo-games/seki07.sgf \
sgf/gnugo-games/seki08.sgf \
sgf/gnugo-games/seki09.sgf \
sgf/gnugo-games/seki10.sgf \
sgf/gnugo-games/seki11.sgf \
sgf/gnugo-games/seki12.sgf \
sgf/gnugo-games/seki13.sgf \
sgf/gnugo-games/seki14.sgf \
sgf/gnugo-games/seki15.sgf \
sgf/gnugo-games/seki_nakade1.sgf \
sgf/gnugo-games/seki_nakade2.sgf \
sgf/ko/remove-ko-threat.1.sgf \
sgf/ladder/adjacent-blocks.sgf \
sgf/ladder/ladder-breaker-2.sgf \
sgf/ladder/ladder-breaker.sgf \
sgf/ladder/ladder-edge-breaker.sgf \
sgf/ladder/ladder-edge.sgf \
sgf/ladder/ladder-no-breaker.sgf \
sgf/ladder/ladder-parallel.sgf \
sgf/ladder/ladder-triple-ko.sgf \
sgf/ladder/long-ladder-captured.sgf \
sgf/ladder/long-ladder.sgf \
sgf/lifeanddeath/4x4nakade.sgf \
sgf/lifeanddeath/eye-tricky.sgf \
sgf/lifeanddeath/good-selfatari.1.sgf \
sgf/lifeanddeath/good-selfatari.2.sgf \
sgf/pass/tromp-taylor-pass.sgf \
sgf/rave-problems/823341-variation-rave-bug.sgf \
sgf/rave-problems/results-105.sgf \
sgf/repetition/long-life.sgf \
sgf/repetition/positional-superko.sgf \
sgf/repetition/repetition-1.sgf \
sgf/repetition/simpleko.sgf \
sgf/repetition/triple-ko.sgf \
sgf/safetytest-whole-board/CZD_05.sgf \
sgf/safetytest-whole-board/CZD_16.sgf \
sgf/safetytest-whole-board/CZD_17.sgf \
sgf/safetytest-whole-board/CZD_20.sgf \
sgf/safetytest-whole-board/CZD_21.sgf \
sgf/safetytest-whole-board/CZD_24.sgf \
sgf/safetytest-whole-board/CZD_26.sgf \
sgf/safetytest-whole-board/CZD_28.sgf \
sgf/safetytest-whole-board/CZD_29.sgf \
sgf/safetytest-whole-board/CZD_31.sgf \
sgf/safetytest-whole-board/CZD_33.sgf \
sgf/safetytest-whole-board/CZD_34.sgf \
sgf/safetytest-whole-board/CZD_35.sgf \
sgf/safetytest-whole-board/CZD_36.sgf \
sgf/safetytest-whole-board/CZD_39.sgf \
sgf/safetytest-whole-board/CZD_41.sgf \
sgf/safetytest-whole-board/CZD_46.sgf \
sgf/safetytest-whole-board/CZD_55.sgf \
sgf/safetytest-whole-board/CZD_58.sgf \
sgf/safetytest-whole-board/CZD_64.sgf \
sgf/safetytest-whole-board/CZD_66.sgf \
sgf/safetytest-whole-board/CZD_67.sgf \
sgf/safetytest-whole-board/CZD_68.sgf \
sgf/safetytest-whole-board/CZD_69.sgf \
sgf/safetytest-whole-board/CZD_71.sgf \
sgf/safetytest-whole-board/CZD_72.sgf \
sgf/safetytest-whole-board/CZD_79.sgf \
sgf/safetytest-whole-board/k01.sgf \
sgf/safetytest-whole-board/k02.sgf \
sgf/safetytest-whole-board/k03.sgf \
sgf/safetytest-whole-board/k04.sgf \
sgf/safetytest-whole-board/k05.sgf \
sgf/safetytest-whole-board/k06.sgf \
sgf/safetytest-whole-board/k07.sgf \
sgf/safetytest-whole-board/k08.sgf \
sgf/safetytest-whole-board/k09.sgf \
sgf/safetytest-whole-board/k10.sgf \
sgf/safetytest-whole-board/k11.sgf \
sgf/safetytest-whole-board/k12.sgf \
sgf/safetytest-whole-board/k13.sgf \
sgf/safetytest-whole-board/k14.sgf \
sgf/safetytest-whole-board/k15.sgf \
sgf/safetytest-whole-board/k16.sgf \
sgf/safetytest-whole-board/k17.sgf \
sgf/safetytest-whole-board/k18.sgf \
sgf/safetytest-whole-board/k19.sgf \
sgf/safetytest-whole-board/k20.sgf \
sgf/safetytest-whole-board/k21.sgf \
sgf/safetytest-whole-board/k22.sgf \
sgf/safetytest-whole-board/k23.sgf \
sgf/safetytest-whole-board/k24.sgf \
sgf/safetytest-whole-board/k25.sgf \
sgf/safetytest-whole-board/k26.sgf \
sgf/safetytest-whole-board/k27.sgf \
sgf/safetytest-whole-board/k28.sgf \
sgf/safetytest-whole-board/k29.sgf \
sgf/safetytest-whole-board/k30.sgf \
sgf/safetytest-whole-board/k31.sgf \
sgf/safetytest-whole-board/k32.sgf \
sgf/safetytest-whole-board/k33.sgf \
sgf/safetytest-whole-board/k34.sgf \
sgf/safetytest-whole-board/k35.sgf \
sgf/safetytest-whole-board/q1.sgf \
sgf/safetytest-whole-board/q10.sgf \
sgf/safetytest-whole-board/q11.sgf \
sgf/safetytest-whole-board/q12.sgf \
sgf/safetytest-whole-board/q13.sgf \
sgf/safetytest-whole-board/q14.sgf \
sgf/safetytest-whole-board/q15.sgf \
sgf/safetytest-whole-board/q16.sgf \
sgf/safetytest-whole-board/q17.sgf \
sgf/safetytest-whole-board/q18.sgf \
sgf/safetytest-whole-board/q19.sgf \
sgf/safetytest-whole-board/q2.sgf \
sgf/safetytest-whole-board/q20.sgf \
sgf/safetytest-whole-board/q21.sgf \
sgf/safetytest-whole-board/q22.sgf \
sgf/safetytest-whole-board/q23.sgf \
sgf/safetytest-whole-board/q24.sgf \
sgf/safetytest-whole-board/q25.sgf \
sgf/safetytest-whole-board/q26.sgf \
sgf/safetytest-whole-board/q27.sgf \
sgf/safetytest-whole-board/q28.sgf \
sgf/safetytest-whole-board/q29.sgf \
sgf/safetytest-whole-board/q3.sgf \
sgf/safetytest-whole-board/q30.sgf \
sgf/safetytest-whole-board/q31.sgf \
sgf/safetytest-whole-board/q4.sgf \
sgf/safetytest-whole-board/q5.sgf \
sgf/safetytest-whole-board/q6.sgf \
sgf/safetytest-whole-board/q7.sgf \
sgf/safetytest-whole-board/q8.sgf \
sgf/safetytest-whole-board/q9.sgf \
sgf/safetytest-whole-board/static-safety.1.sgf \
sgf/safetytest-whole-board/static-safety.2.sgf \
sgf/safetytest/benson_safe1.sgf \
sgf/safetytest/benson_safe2.sgf \
sgf/safetytest/benson_safe3.sgf \
sgf/safetytest/benson_safe4.sgf \
sgf/safetytest/benson_safe5.sgf \
sgf/safetytest/benson_unsafe.sgf \
sgf/safetytest/connect-to-safe.1.sgf \
sgf/safetytest/eyetest001.sgf \
sgf/safetytest/nakade-2x3.sgf \
sgf/safetytest/nosafe.3.sgf \
sgf/safetytest/nosafe.4.sgf \
sgf/safetytest/static-safety.1.sgf \
sgf/safetytest/static-safety.2.sgf \
sgf/safetytest/static-safety.3.sgf \
sgf/safetytest/static-safety.4.sgf \
sgf/safetytest/static-safety.5.sgf \
sgf/safetytest/static-safety.6.sgf \
sgf/safetytest/static-safety.7.sgf \
sgf/safetytest/static-safety.8.sgf \
sgf/safetytest/static-safety.9.sgf \
sgf/safetytest/static-safety.10.sgf \
sgf/seki/sheppard-seki.sgf \
sgf/seki/sheppard-seki-2.sgf \
sgf/seki/sheppard-seki-3.sgf \
sgf/semeai-exact/FS1-solution-white.sgf \
sgf/semeai-exact/FS2-solution-black.sgf \
sgf/semeai-exact/FS2-solution-white.sgf \
sgf/semeai-exact/semeai-1eye-1shared-0ext.sgf \
sgf/semeai-exact/semeai-1eye-1shared-1+3ext.sgf \
sgf/semeai-exact/semeai-2pteye-1shared-0+3ext.sgf \
sgf/semeai-exact/semeai-plain-2L.sgf \
sgf/semeai-exact/semeai-plain-3L.sgf \
sgf/semeai-exact/semeai-plain-4L.sgf \
sgf/semeai-exact/semeai-plain-5L.sgf \
sgf/semeai-exact/semeai-plain-6L.sgf \
sgf/semeai/Fuego9-Fuego-27-semeai.1.sgf \
sgf/semeai/Fuego9-Fuego-27-semeai.2.sgf \
sgf/semeai/Fuego9-Fuego-27-semeai.3.sgf \
sgf/semeai/Fuego9-Fuego-27-semeai.4.sgf \
sgf/semeai/Fuego9-Fuego-27-semeai.5.sgf \
sgf/semeai/filllib-test.1.sgf \
sgf/semeai/semeai-eval.1.sgf \
sgf/simpleplayers/simpleplayers.1.sgf \
sgf/simpleplayers/simpleplayers.2.sgf \
sgf/simpleplayers/simpleplayers.3.sgf \
sgf/simpleplayers/test-pass.sgf \
sgf/uct/capture.1.sgf \
sgf/uct/mogo-slides-2006.sgf \
sgf/uct/mogo-tr6062-fig4-right.sgf \
sgf/uct/patterns-cut2.sgf \
sgf/uct/patterns-edge1.sgf \
sgf/uct/patterns-edge4.sgf \
sgf/uct/vital-1.sgf \
sgf/uct_playout/uct_playout_atari_defense_1.sgf \
sgf/uct_playout/uct_playout_atari_defense_2.sgf \
sgf/uct_playout/uct_playout_atari_defense_3.sgf \
sgf/uct_playout/uct_playout_capture_1.sgf
