noinst_LIBRARIES = libfuego_smartgame.a

libfuego_smartgame_a_SOURCES = \
SgBoardConst.cpp \
SgBookBuilder.cpp \
SgCmdLineOpt.cpp \
SgConnCompIterator.cpp \
SgDebug.cpp \
SgEvaluatedMoves.cpp \
SgException.cpp \
SgFastLog.cpp \
SgGameReader.cpp \
SgGameWriter.cpp \
SgGtpClient.cpp \
SgGtpCommands.cpp \
SgGtpUtil.cpp \
SgIncrementalStack.cpp \
SgInit.cpp \
SgMemCheck.cpp \
SgMiaiMap.cpp \
SgMiaiStrategy.cpp \
SgNbIterator.cpp \
SgNode.cpp \
SgNodeUtil.cpp \
SgPoint.cpp \
SgPointSet.cpp \
SgPointSetUtil.cpp \
SgProbCut.cpp \
SgProcess.cpp \
SgProp.cpp \
SgRandom.cpp \
SgRect.cpp \
SgSearch.cpp \
SgSearchControl.cpp \
SgSearchStatistics.cpp \
SgSearchTracer.cpp \
SgSearchValue.cpp \
SgStrategy.cpp \
SgStringUtil.cpp \
SgMpiSynchronizer.cpp \
SgSystem.cpp \
SgTime.cpp \
SgTimeControl.cpp \
SgTimeRecord.cpp \
SgUctSearch.cpp \
SgUctTree.cpp \
SgUctTreeUtil.cpp \
SgUtil.cpp \
SgVectorUtility.cpp \
SgWrite.cpp

noinst_HEADERS = \
SgArray.h \
SgBookBuilder.h \
SgBWArray.h \
SgBWSet.h \
SgBlackWhite.h \
SgBoardColor.h \
SgBoardConst.h \
SgCmdLineOpt.h \
SgConnCompIterator.h \
SgDebug.h \
SgEBWArray.h \
SgEvaluatedMoves.h \
SgException.h \
SgFastLog.h \
SgGameReader.h \
SgGameWriter.h \
SgGtpClient.h \
SgGtpCommands.h \
SgGtpUtil.h \
SgHash.h \
SgHashTable.h \
SgIncrementalStack.h \
SgInit.h \
SgMarker.h \
SgMath.h \
SgMemCheck.h \
SgMiaiMap.h \
SgMiaiStrategy.h \
SgMove.h \
SgNbIterator.h \
SgNode.h \
SgNodeUtil.h \
SgPoint.h \
SgPointArray.h \
SgPointIterator.h \
SgPointSet.h \
SgPointSetUtil.h \
SgProbCut.h \
SgProcess.h \
SgProp.h \
SgRandom.h \
SgRect.h \
SgRestorer.h \
SgSList.h \
SgSearch.h \
SgSearchControl.h \
SgSearchStatistics.h \
SgSearchTracer.h \
SgSearchValue.h \
SgSortedArray.h \
SgSortedMoves.h \
SgStack.h \
SgStatistics.h \
SgStrategy.h \
SgStringUtil.h \
SgMpiSynchronizer.h \
SgSystem.h \
SgThreadedWorker.h \
SgTime.h \
SgTimeControl.h \
SgTimeRecord.h \
SgTimer.h \
SgUctSearch.h \
SgUctTree.h \
SgUctTreeUtil.h \
SgUtil.h \
SgVector.h \
SgVectorUtility.h \
SgWrite.h

libfuego_smartgame_a_CPPFLAGS = \
$(BOOST_CPPFLAGS) \
-I@top_srcdir@/gtpengine

DISTCLEANFILES = *~
